some changes haha hatdog

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                 <span>Documents</span>
             </button>
 
+            <button id="usersNavBtn" data-page="users" data-icon="users" class="nav-item" style="display: none;">
+                <span class="nav-icon"></span>
+                <span>Users</span>
+            </button>
+
             <button data-page="settings" data-icon="settings" class="nav-item">
                 <span class="nav-icon"></span>
                 <span>Settings</span>
@@ -303,6 +308,7 @@
     <script src="js/ui.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/documents.js"></script>
+    <script src="js/admin.js"></script>
     <script src="js/app.js"></script>
 
     <script>
@@ -314,6 +320,7 @@
                 { id: 'progress-page', file: 'pages/progress.html' },
                 { id: 'timeline-page', file: 'pages/timeline.html' },
                 { id: 'documents-page', file: 'pages/documents.html' },
+                { id: 'users-page', file: 'pages/users.html' },
                 { id: 'settings-page', file: 'pages/settings.html' }
             ];
 
@@ -340,6 +347,9 @@
             
             // Initialize documents module
             Documents.init();
+
+            // Initialize admin module if user is admin
+            Admin.init();
             
             // Render stats immediately for dashboard
             App.renderStats();
