--- a/pages/progress.html
+++ b/pages/progress.html
@@ -1,37 +1,37 @@
 <div id="progress-page" class="page-section">
     <!-- Overall Progress -->
     <div class="progress-card">
-        <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 24px;">
+        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
             <div class="progress-icon">
-                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"></circle>
                     <path d="M12 6v6l4 2"></path>
                 </svg>
             </div>
             <div>
-                <h3 style="font-size: 16px; font-weight: 700; color: var(--text); margin-bottom: 4px;">Overall Progress</h3>
-                <p style="font-size: 12px; color: var(--text-muted);">Your journey to completion</p>
+                <h3 style="font-size: 14px; font-weight: 700; color: var(--text); margin-bottom: 2px;">Overall Progress</h3>
+                <p style="font-size: 11px; color: var(--text-muted);">Your journey to completion</p>
             </div>
         </div>
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px;">
             <div>
-                <div style="text-align: center; margin-bottom: 16px;">
-                    <div style="font-size: 28px; font-weight: 800; color: var(--primary); line-height: 1;" id="overallPercent">0%</div>
-                    <p style="font-size: 12px; color: var(--text-muted); margin-top: 8px;">completion rate</p>
+                <div style="text-align: center; margin-bottom: 12px;">
+                    <div style="font-size: 24px; font-weight: 800; color: var(--primary); line-height: 1;" id="overallPercent">0%</div>
+                    <p style="font-size: 10px; color: var(--text-muted); margin-top: 6px;">completion rate</p>
                 </div>
             </div>
             <div>
                 <div class="progress-bar-wrapper">
                     <div id="overallProgressBar" class="progress-bar-fill"></div>
                 </div>
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin-top: 16px;">
-                    <div style="padding: 12px; background: var(--bg-alt); border-radius: 8px; text-align: center;">
-                        <div style="font-size: 16px; font-weight: 700; color: var(--primary);">0</div>
-                        <div style="font-size: 11px; color: var(--text-muted); margin-top: 4px;">Completed</div>
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 12px;">
+                    <div style="padding: 10px; background: var(--bg-alt); border-radius: 6px; text-align: center;">
+                        <div style="font-size: 14px; font-weight: 700; color: var(--primary);">0</div>
+                        <div style="font-size: 10px; color: var(--text-muted); margin-top: 3px;">Completed</div>
                     </div>
-                    <div style="padding: 12px; background: var(--bg-alt); border-radius: 8px; text-align: center;">
-                        <div style="font-size: 16px; font-weight: 700; color: #3b82f6;">0</div>
-                        <div style="font-size: 11px; color: var(--text-muted); margin-top: 4px;">Remaining</div>
+                    <div style="padding: 10px; background: var(--bg-alt); border-radius: 6px; text-align: center;">
+                        <div style="font-size: 14px; font-weight: 700; color: #3b82f6;">0</div>
+                        <div style="font-size: 10px; color: var(--text-muted); margin-top: 3px;">Remaining</div>
                     </div>
                 </div>
             </div>
@@ -40,23 +40,23 @@
 
     <!-- Category Progress -->
     <div>
-        <h3 style="font-size: 14px; font-weight: 700; color: var(--text); margin-bottom: 16px; display: flex; align-items: center; gap: 8px;">
-            <div style="width: 24px; height: 24px; background: var(--bg-alt); border-radius: 6px; display: flex; align-items: center; justify-content: center; color: var(--primary);">📂</div>
+        <h3 style="font-size: 12px; font-weight: 700; color: var(--text); margin-bottom: 12px; display: flex; align-items: center; gap: 6px; text-transform: uppercase; letter-spacing: 0.5px;">
+            <div style="width: 20px; height: 20px; background: var(--bg-alt); border-radius: 4px; display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 10px;">📂</div>
             Progress by Category
         </h3>
-        <div id="categoryProgress" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px;">
+        <div id="categoryProgress" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 12px;">
             <div class="empty-state">No tasks in any category yet</div>
         </div>
     </div>
 
     <!-- Milestones -->
-    <div style="margin-top: 32px;">
-        <h3 style="font-size: 14px; font-weight: 700; color: var(--text); margin-bottom: 16px; display: flex; align-items: center; gap: 8px;">
-            <div style="width: 24px; height: 24px; background: linear-gradient(135deg, #f59e0b, #d97706); border-radius: 6px; display: flex; align-items: center; justify-content: center; color: white; font-size: 12px;">⭐</div>
+    <div style="margin-top: 24px;">
+        <h3 style="font-size: 12px; font-weight: 700; color: var(--text); margin-bottom: 12px; display: flex; align-items: center; gap: 6px; text-transform: uppercase; letter-spacing: 0.5px;">
+            <div style="width: 20px; height: 20px; background: linear-gradient(135deg, #f59e0b, #d97706); border-radius: 4px; display: flex; align-items: center; justify-content: center; color: white; font-size: 10px;">⭐</div>
             Milestones
         </h3>
-        <div id="milestones" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 16px;">
-            <div class="empty-state">No milestones yet</div>
+        <div id="milestones" style="display: flex; flex-wrap: wrap; gap: 8px; align-items: center;">
+            <div class="empty-state" style="padding: 20px;">No milestones yet</div>
         </div>
     </div>
 </div>
