--- a/signup.html
+++ b/signup.html
@@ -195,6 +195,142 @@
             text-decoration: underline;
         }
 
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            animation: fadeIn 0.3s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .modal.active {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 32px;
+            border-radius: 12px;
+            max-width: 600px;
+            width: 90%;
+            max-height: 80vh;
+            overflow-y: auto;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.3s ease-out;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(30px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 24px;
+            border-bottom: 1px solid #e5e7eb;
+            padding-bottom: 16px;
+        }
+
+        .modal-header h2 {
+            font-size: 24px;
+            font-weight: 700;
+            color: #101828;
+            margin: 0;
+        }
+
+        .modal-close {
+            background: none;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: #667085;
+            width: 32px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 6px;
+            transition: all 0.2s;
+        }
+
+        .modal-close:hover {
+            background: #f3f4f6;
+            color: #101828;
+        }
+
+        .modal-body {
+            color: #344054;
+            line-height: 1.6;
+            font-size: 14px;
+        }
+
+        .modal-body h3 {
+            font-size: 16px;
+            font-weight: 600;
+            color: #101828;
+            margin-top: 20px;
+            margin-bottom: 12px;
+        }
+
+        .modal-body h3:first-child {
+            margin-top: 0;
+        }
+
+        .modal-body p {
+            margin-bottom: 12px;
+        }
+
+        .modal-body ul {
+            margin-left: 20px;
+            margin-bottom: 12px;
+        }
+
+        .modal-body li {
+            margin-bottom: 8px;
+        }
+
+        .modal-footer {
+            margin-top: 24px;
+            padding-top: 16px;
+            border-top: 1px solid #e5e7eb;
+            text-align: right;
+        }
+
+        .modal-footer button {
+            padding: 10px 20px;
+            background: #667eea;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.2s;
+        }
+
+        .modal-footer button:hover {
+            background: #5568d3;
+        }
+
         .signup-button {
             width: 100%;
             padding: 12px;
@@ -369,7 +505,7 @@
                 <div class="terms-check">
                     <input type="checkbox" id="terms" name="terms" required>
                     <label for="terms">
-                        I agree to the <a href="#" onclick="return false;">Terms of Service</a> and <a href="#" onclick="return false;">Privacy Policy</a>
+                        I agree to the <a href="#" onclick="openTermsModal(); return false;">Terms of Service</a> and <a href="#" onclick="openPrivacyModal(); return false;">Privacy Policy</a>
                     </label>
                 </div>
 
@@ -381,6 +517,111 @@
                     Already have an account?<a href="login.html">Log in</a>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <!-- Terms of Service Modal -->
+    <div id="termsModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Terms of Service</h2>
+                <button class="modal-close" onclick="closeTermsModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <h3>1. Acceptance of Terms</h3>
+                <p>By creating an account with OJT Organizer, you agree to these Terms of Service. If you do not agree to these terms, please do not use our service.</p>
+
+                <h3>2. Account Registration</h3>
+                <p>You agree to provide accurate, complete, and current information during registration. You are responsible for maintaining the confidentiality of your account credentials and password. You agree to notify us immediately of any unauthorized use of your account.</p>
+
+                <h3>3. User Responsibilities</h3>
+                <ul>
+                    <li>Use the service only for managing your internship tasks and related activities</li>
+                    <li>Not engage in any unlawful or prohibited activities</li>
+                    <li>Not attempt to access unauthorized portions of our service</li>
+                    <li>Not upload malicious code, viruses, or harmful materials</li>
+                    <li>Not harass, threaten, or abuse other users</li>
+                </ul>
+
+                <h3>4. Data and Content</h3>
+                <p>You retain ownership of all data and content you upload to OJT Organizer. By using our service, you grant us the right to store, process, and use your data to provide the service. We will protect your data according to our Privacy Policy.</p>
+
+                <h3>5. Intellectual Property</h3>
+                <p>OJT Organizer and all its features, functionality, and content are owned by us. You may not reproduce, modify, or distribute any content without permission.</p>
+
+                <h3>6. Limitation of Liability</h3>
+                <p>OJT Organizer is provided "as is" without warranties. We are not liable for any indirect, incidental, or consequential damages arising from your use of the service.</p>
+
+                <h3>7. Termination</h3>
+                <p>We reserve the right to terminate or suspend your account at any time if you violate these terms or for any other reason.</p>
+
+                <h3>8. Changes to Terms</h3>
+                <p>We may update these terms at any time. Your continued use of OJT Organizer constitutes acceptance of the updated terms.</p>
+            </div>
+            <div class="modal-footer">
+                <button onclick="closeTermsModal()">Close</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Privacy Policy Modal -->
+    <div id="privacyModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Privacy Policy</h2>
+                <button class="modal-close" onclick="closePrivacyModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <h3>1. Information We Collect</h3>
+                <p>We collect the following information when you create an account:</p>
+                <ul>
+                    <li>Username and email address</li>
+                    <li>Full name</li>
+                    <li>Password (encrypted)</li>
+                    <li>Task and project data you create and manage</li>
+                    <li>Activity logs and usage statistics</li>
+                </ul>
+
+                <h3>2. How We Use Your Information</h3>
+                <p>We use your information to:</p>
+                <ul>
+                    <li>Provide and maintain the OJT Organizer service</li>
+                    <li>Personalize your experience</li>
+                    <li>Communicate important updates and notifications</li>
+                    <li>Improve our service based on usage patterns</li>
+                    <li>Ensure security and prevent fraud</li>
+                </ul>
+
+                <h3>3. Data Security</h3>
+                <p>We implement industry-standard security measures to protect your data, including encryption, secure servers, and regular security audits. However, no system is 100% secure. You are responsible for keeping your password confidential.</p>
+
+                <h3>4. Data Sharing</h3>
+                <p>We do not sell, trade, or rent your personal information to third parties. Your data is only shared with authorized personnel who need it to provide the service.</p>
+
+                <h3>5. Cookies and Tracking</h3>
+                <p>We use cookies and similar technologies to enhance your experience and understand how you use our service. You can control cookie settings through your browser preferences.</p>
+
+                <h3>6. Your Rights</h3>
+                <p>You have the right to:</p>
+                <ul>
+                    <li>Access your personal data</li>
+                    <li>Request correction of inaccurate information</li>
+                    <li>Request deletion of your account and associated data</li>
+                    <li>Opt-out of promotional communications</li>
+                </ul>
+
+                <h3>7. Data Retention</h3>
+                <p>Your data will be retained as long as your account is active. Upon account deletion, we will securely delete your data within 30 days, except where required by law.</p>
+
+                <h3>8. Changes to Privacy Policy</h3>
+                <p>We may update this Privacy Policy periodically. We will notify you of significant changes via email or through the service.</p>
+
+                <h3>9. Contact Us</h3>
+                <p>If you have questions about our Privacy Policy or data practices, please contact us through the support section in the application.</p>
+            </div>
+            <div class="modal-footer">
+                <button onclick="closePrivacyModal()">Close</button>
+            </div>
         </div>
     </div>
 
@@ -474,6 +715,44 @@
                 errorMsg.style.display = 'block';
                 submitBtn.disabled = false;
                 submitBtn.textContent = 'Create Account';
+            }
+        });
+
+        // Modal functions
+        function openTermsModal() {
+            document.getElementById('termsModal').classList.add('active');
+        }
+
+        function closeTermsModal() {
+            document.getElementById('termsModal').classList.remove('active');
+        }
+
+        function openPrivacyModal() {
+            document.getElementById('privacyModal').classList.add('active');
+        }
+
+        function closePrivacyModal() {
+            document.getElementById('privacyModal').classList.remove('active');
+        }
+
+        // Close modal when clicking outside of it
+        window.onclick = function(event) {
+            const termsModal = document.getElementById('termsModal');
+            const privacyModal = document.getElementById('privacyModal');
+            
+            if (event.target === termsModal) {
+                termsModal.classList.remove('active');
+            }
+            if (event.target === privacyModal) {
+                privacyModal.classList.remove('active');
+            }
+        };
+
+        // Close modals with Escape key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                document.getElementById('termsModal').classList.remove('active');
+                document.getElementById('privacyModal').classList.remove('active');
             }
         });
     </script>
