--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -11,6 +11,13 @@
             <p style="font-size: 12px; color: var(--text-muted);">Your recent activities and updates</p>
         </div>
     </div>
+    <div class="timeline-filters">
+        <button class="timeline-filter-btn active" data-filter="all">All</button>
+        <button class="timeline-filter-btn" data-filter="created">Created</button>
+        <button class="timeline-filter-btn" data-filter="updated">Updated</button>
+        <button class="timeline-filter-btn" data-filter="deleted">Deleted</button>
+        <button class="timeline-filter-btn" data-filter="status">Status Changes</button>
+    </div>
     <div id="timelineList" class="timeline-container">
         <div class="empty-state">No activities yet</div>
     </div>
