dashboard and nightmode fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OJT Organizer</title>
+    <link rel="icon" type="image/png" href="assets/ojtLogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -111,7 +112,7 @@
     <aside id="sidebar">
         <!-- Logo -->
         <div class="logo-container">
-            <div class="logo-icon" data-icon="briefcase"></div>
+            <img src="assets/ojtLogo.png" alt="OJT Organizer" style="width: 48px; height: 48px; border-radius: 10px; object-fit: cover;">
             <div class="logo-text">
                 <h1>OJT Organizer</h1>
                 <p>Internship Hub</p>
